--- a/index.html
+++ b/index.html
@@ -40,6 +40,11 @@
         <p>Explore database design, SQL, and connectivity concepts.</p>
         <a href="dbms.html" class="btn">Learn More</a>
       </div>
+        <div class="card">
+        <h3>Database Management System (DBMS) part 23</h3>
+        <p>Explore database design, SQL, and connectivity concepts.</p>
+        <a href="dbmso.html" class="btn">Learn More</a>
+      </div>
       <div class="card">
         <h3>Web Technology</h3>
         <p>Learn HTML, JavaScript, and PHP for web development.</p>
@@ -73,4 +78,5 @@
   </footer>
 </body>
 </html>
+
 
